# coolbid

./: .env.local.example  .gitignore  next.config.ts  package-lock.json  package.json  vercel.json  vitest.config.ts
docs/: coolbid-design-system.md
docs/ops/: vendor-products-classifier.md
geometry-service/: modal_app.py  pyproject.toml
geometry-service/app/: main.py  polygons.py  postprocess.py  preprocess.py  prompts.py  segment.py  types.py  vision.py
geometry-service/tests/: conftest.py  test_api.py  test_pipeline_diagnostic.py  test_polygons.py  test_postprocess.py  test_preprocess.py  test_preprocess_new.py
scripts/: backfill-vendor-classification.mjs  impersonate.mjs
src/app/: globals.css  layout.tsx
src/hooks/: use-estimator.ts
src/lib/: anthropic.test.ts  anthropic.ts  cron-auth.ts  format-feet-inches.test.ts  format-feet-inches.ts  oauth-state.ts  resend.ts  stripe.ts  utils.ts
src/stores/: feedback-store.ts  sidebar-store.ts
src/types/: billing.ts  catalog.ts  contractor-preferences.ts  database.ts  duct-layout.ts  email-connection.ts  feedback.ts  hvac.ts
supabase/migrations/: 001_initial.sql  002_parts_database.sql  003_billing.sql  004_quote_miner.sql  005_supplier_email_domains_seed.sql  006_share_to_homeowner.sql  007_estimate_acceptance.sql  008_pricing_tiers.sql  009_feedback_prompts.sql  010_supplier_is_active.sql  011_unique_email_connection.sql  012_room_geometry.sql  013_room_conditioned.sql  014_contractor_preferences.sql  014_room_vertices.sql  016_retire_starter_wire_vendors.sql  017_contractor_preferences.sql  (+7 more)
(+281 files in other folders)
