[project]
name = "coolbid-geometry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "opencv-python-headless>=4.10",
    "numpy>=2.0",
    "pydantic>=2.10",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
    "segment-anything-3>=0.1",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.28",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
